--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -7,13 +7,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
-  <body>
+  <body class="w-100 h-100">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <div id="app"></div>
+    <div id="app" class="w-100 h-100"></div>
     <style>
         html, body {
             height: 100%;
